tests/snapshots/tekenizer_tests__tekenizer_tests__tokenizer_lexer_sample_3.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "keyword",
            raw: "search",
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Token {
            kind: "keyword",
            raw: "value",
            span: Span {
                start: 7,
                end: 12,
            },
        },
        Token {
            kind: "keyword",
            raw: "condition",
            span: Span {
                start: 13,
                end: 22,
            },
        },
        Token {
            kind: "colon",
            raw: ":",
            span: Span {
                start: 22,
                end: 23,
            },
        },
        Token {
            kind: "string",
            raw: "value",
            span: Span {
                start: 25,
                end: 30,
            },
        },
    ],
)
