tests/snapshots/tekenizer_tests__tekenizer_tests__tokenizer_lexer_selector_with_variables_2.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "newline",
            raw: "\n",
            span: Span {
                start: 0,
                end: 1,
            },
        },
        Token {
            kind: "keyword",
            raw: "$",
            span: Span {
                start: 13,
                end: 14,
            },
        },
        Token {
            kind: "dot",
            raw: ".",
            span: Span {
                start: 14,
                end: 15,
            },
        },
        Token {
            kind: "keyword",
            raw: "user",
            span: Span {
                start: 15,
                end: 19,
            },
        },
        Token {
            kind: "equal",
            raw: "=",
            span: Span {
                start: 20,
                end: 21,
            },
        },
        Token {
            kind: "keyword",
            raw: "$VAR",
            span: Span {
                start: 22,
                end: 26,
            },
        },
        Token {
            kind: "operation",
            raw: "&&",
            span: Span {
                start: 27,
                end: 29,
            },
        },
        Token {
            kind: "open_curly_bracket",
            raw: "(",
            span: Span {
                start: 30,
                end: 31,
            },
        },
        Token {
            kind: "newline",
            raw: "\n",
            span: Span {
                start: 31,
                end: 32,
            },
        },
        Token {
            kind: "keyword",
            raw: "$",
            span: Span {
                start: 48,
                end: 49,
            },
        },
        Token {
            kind: "dot",
            raw: ".",
            span: Span {
                start: 49,
                end: 50,
            },
        },
        Token {
            kind: "keyword",
            raw: "tag",
            span: Span {
                start: 50,
                end: 53,
            },
        },
        Token {
            kind: "open_square_bracket",
            raw: "[",
            span: Span {
                start: 53,
                end: 54,
            },
        },
        Token {
            kind: "keyword",
            raw: "$TAG_NAME",
            span: Span {
                start: 54,
                end: 63,
            },
        },
        Token {
            kind: "close_square_bracket",
            raw: "]",
            span: Span {
                start: 63,
                end: 64,
            },
        },
        Token {
            kind: "equal",
            raw: "=",
            span: Span {
                start: 65,
                end: 66,
            },
        },
        Token {
            kind: "keyword",
            raw: "true",
            span: Span {
                start: 67,
                end: 71,
            },
        },
        Token {
            kind: "operation",
            raw: "||",
            span: Span {
                start: 72,
                end: 74,
            },
        },
        Token {
            kind: "newline",
            raw: "\n",
            span: Span {
                start: 74,
                end: 75,
            },
        },
        Token {
            kind: "keyword",
            raw: "$",
            span: Span {
                start: 91,
                end: 92,
            },
        },
        Token {
            kind: "dot",
            raw: ".",
            span: Span {
                start: 92,
                end: 93,
            },
        },
        Token {
            kind: "keyword",
            raw: "tag",
            span: Span {
                start: 93,
                end: 96,
            },
        },
        Token {
            kind: "open_square_bracket",
            raw: "[",
            span: Span {
                start: 96,
                end: 97,
            },
        },
        Token {
            kind: "template_start",
            raw: "`",
            span: Span {
                start: 97,
                end: 98,
            },
        },
        Token {
            kind: "template",
            raw: "",
            span: Span {
                start: 98,
                end: 98,
            },
        },
        Token {
            kind: "template_start_expression",
            raw: "${",
            span: Span {
                start: 98,
                end: 100,
            },
        },
        Token {
            kind: "keyword",
            raw: "TAG_NAME",
            span: Span {
                start: 100,
                end: 108,
            },
        },
        Token {
            kind: "template_close_expression",
            raw: "}",
            span: Span {
                start: 108,
                end: 109,
            },
        },
        Token {
            kind: "template",
            raw: "_alt",
            span: Span {
                start: 109,
                end: 113,
            },
        },
        Token {
            kind: "template_close",
            raw: "`",
            span: Span {
                start: 113,
                end: 114,
            },
        },
        Token {
            kind: "close_square_bracket",
            raw: "]",
            span: Span {
                start: 114,
                end: 115,
            },
        },
        Token {
            kind: "equal",
            raw: "=",
            span: Span {
                start: 116,
                end: 117,
            },
        },
        Token {
            kind: "keyword",
            raw: "true",
            span: Span {
                start: 118,
                end: 122,
            },
        },
        Token {
            kind: "newline",
            raw: "\n",
            span: Span {
                start: 122,
                end: 123,
            },
        },
        Token {
            kind: "close_parenthesis",
            raw: ")",
            span: Span {
                start: 135,
                end: 136,
            },
        },
        Token {
            kind: "newline",
            raw: "\n",
            span: Span {
                start: 136,
                end: 137,
            },
        },
    ],
)
