tests/snapshots/tekenizer_tests__tekenizer_tests__tokenizer_lexer_string_template_4.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "template",
            raw: "a",
            span: Span {
                start: 1,
                end: 2,
            },
        },
        Token {
            kind: "keyword",
            raw: "$",
            span: Span {
                start: 2,
                end: 3,
            },
        },
        Token {
            kind: "open_curly_bracket",
            raw: "{",
            span: Span {
                start: 3,
                end: 4,
            },
        },
        Token {
            kind: "keyword",
            raw: "b",
            span: Span {
                start: 4,
                end: 5,
            },
        },
        Token {
            kind: "open_curly_bracket",
            raw: "{",
            span: Span {
                start: 5,
                end: 6,
            },
        },
        Token {
            kind: "keyword",
            raw: "c",
            span: Span {
                start: 6,
                end: 7,
            },
        },
        Token {
            kind: "close_curly_bracket",
            raw: "}",
            span: Span {
                start: 7,
                end: 8,
            },
        },
        Token {
            kind: "keyword",
            raw: "d",
            span: Span {
                start: 8,
                end: 9,
            },
        },
        Token {
            kind: "close_curly_bracket",
            raw: "}",
            span: Span {
                start: 9,
                end: 10,
            },
        },
        Token {
            kind: "keyword",
            raw: "e",
            span: Span {
                start: 10,
                end: 11,
            },
        },
        Token {
            kind: "template",
            raw: "",
            span: Span {
                start: 12,
                end: 12,
            },
        },
        Token {
            kind: "template",
            raw: "",
            span: Span {
                start: 13,
                end: 13,
            },
        },
    ],
)
