tests/snapshots/tekenizer_tests__tekenizer_tests__tokenizer_lexer_string_with_scape_char.snap
---
source: tests/tekenizer_tests.rs
expression: tokens
---
Ok(
    [
        Token {
            kind: "string",
            raw: "i'm string \\\"",
            span: Span {
                start: 1,
                end: 14,
            },
        },
    ],
)
